--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les pépites du coins</title>
-    <link rel="stylesheet" href="theam.css" />
+    <link rel="stylesheet" href="/dist/css/theme.css" />
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <img
         src="assets/logo-title.png"
         alt="logo Les pépites du coins"
-        class="logo"
+        class="logo-title"
       />
       <div claa="schear-bar">
         <form action="GET">
@@ -33,7 +33,7 @@
           <li><a href="">Marché</a></li>
         </ul>
       </nav>
-      <div>
+      <div class="profil">
         <img src="" alt="logo personnage" />
         <a href="Profil.html">Profil</a>
       </div>
