--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
   </head>
   <body>
-    <header class="header">
+    <header class="header_container">
       <div class="header-container">
-        <div class="logo">
+        <!-- <div class="logo">
           <img
           src="assets/logo-title.png"
           alt="logo Les pépites du coins"
@@ -20,7 +20,7 @@
             <a href="Profil.html" class="p-lien">Profil</a>
             <a href="Profil.html" class="p-logo"> &#128105;&#127996;</a>
           </div>
-        </div>
+        </div> -->
           
         <div class="schear-bar">
           <button class="btn">Crée un évenement</button>
@@ -33,14 +33,14 @@
             <button type="submit" class="btn-search">Rechercher</button>
           </form>
         </div>
-        <nav class="nav">
+        <!-- <nav class="nav">
           <ul class="nav-list">
             <li><a href="#Acceuil">Acceuil</a></li>
             <li><a href="#Moto/auto">Moto/auto</a></li>
             <li><a href="#Vêtement">Vêtement</a></li>
             <li><a href="#Marché">Marché</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
   </body>
