--- a/index.html
+++ b/index.html
@@ -6,342 +6,39 @@
     <title>Les pépites du coins</title>
     <link rel="stylesheet" href="/dist/css/theme.css" />
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <div class="header_container">
-        <div class="container">
-          <input
-            type="text"
-            maxlength="12"
-            placeholder="Rechercher"
-            class="searchbar"
-          />
-          <img
-            src="https://images-na.ssl-images-amazon.com/images/I/41gYkruZM2L.png"
-            alt="search icon"
-            class="button"
-          />
+    <header class="header">
+      <div class="container">
+        <div class="header_top">
+          <div class="header_logo">
+            Logo
+          </div>
+          <div class="header_searchbar">
+            <div class="header_searchbar_input">
+              <input type="text" class="form-control" value="" name="" />
+            </div>
+            <div class="header_searchbar_btn">
+              <button class="btn">Créer un événement</button>
+            </div>
+          </div>
+          <div class="header_profile">header_profile</div>
         </div>
-        <button class="btn-connexion">Connexion</button>
-        <!-- Je veux pas envoyer mais le logo recherche -->
+        <div class="header_bottom">
+          <nav>
+            <ul>
+              <li>Accueil</li>
+              <li>Auto/Moto</li>
+              <li>Vêtements</li>
+              <li>Marché</li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
-
-<!-- ************************ Header ****************************              -->
-
-    <main>
-      <h2>Récents</h2>
-      <section class="article-recent js-article-recent">
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card-article">
-          <div class="card-container">
-            <div class="card-img">
-              <img src="assets/bocante.jpg" alt="image de brocante" />
-            </div>
-            <div class="card-text">
-              <p class="title_card">Vide Grenier</p>
-              <p class="date-card">25 Juin 2025</p>
-            </div>
-            <div class="card-category">
-              <div class="like-card">
-              <!-- - <img src="assets/coeur.png" alt="">  -->
-              </div>
-              <div class="category-card">
-                <p>Fripe</p>
-              </div>
-            </div>
-          </div>
-        </article>
-       
-      </section>
-<!--***************************** auto/moto *********************************-->
-      <h2>Auto/Moto</h2>
-      <section class="article-auto js-article-auto">
-        <section class="article-recent js-article-recent">
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/auto.jpg" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card-1">
-                  <p>auto/moto</p>
-                </div>
-              </div>
-            </div>
-          </article>
-  
-          
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/affiche-tourauto-2025.webp" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card-1">
-                  <p>Auto/Moto</p>
-                </div>
-              </div>
-            </div>
-          </article>
-  
-  
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/moto-1.jpg" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card">
-                  <p>Fripe</p>
-                </div>
-              </div>
-            </div>
-          </article>
-      </section>
-
-
-      <section class="aritcle-locaux js-locaux">
-
-      <h2>Local</h2>
-
-        <section class="article-recent js-article-recent">
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/bric-a-brac.jpg" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card">
-                  <p>Fripe</p>
-                </div>
-              </div>
-            </div>
-          </article>
-  
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/bocante.jpg" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card">
-                  <p>Fripe</p>
-                </div>
-              </div>
-            </div>
-          </article>
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/bric-a-brac.jpg" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card">
-                  <p>Fripe</p>
-                </div>
-              </div>
-            </div>
-          </article>
-  
-  
-          <article class="card-article">
-            <div class="card-container">
-              <div class="card-img">
-                <img src="assets/bocante.jpg" alt="image de brocante" />
-              </div>
-              <div class="card-text">
-                <p class="title_card">Vide Grenier</p>
-                <p class="date-card">25 Juin 2025</p>
-              </div>
-              <div class="card-category">
-                <div class="like-card">
-                <!-- - <img src="assets/coeur.png" alt="">  -->
-                </div>
-                <div class="category-card">
-                  <p>Fripe</p>
-                </div>
-              </div>
-            </div>
-          </article>
-      </section>
-    </main>
   </body>
 </html>
