--- a/index.html
+++ b/index.html
@@ -26,15 +26,24 @@
               <button class="btn">Créer un événement</button>
             </div>
           </div>
-          <div class="header_profile">header_profile</div>
+          <div class="material-icons">
+            <span class="material-icons-outlined">
+             &#xE87C
+              </span>
+          </div>
         </div>
         <div class="header_bottom">
           <nav>
             <ul>
-              <li>Accueil</li>
-              <li>Auto/Moto</li>
-              <li>Vêtements</li>
-              <li>Marché</li>
+              <li>
+                <a href="index.html">
+                  Accueil
+                </a></li>
+              <li>
+                <a href="Auto/Moto.html">Auto/Moto</a></li>
+              <li><a href="Vêtements.html">Vêtements</a>
+                </li>
+              <li><a href="Marché.html">Marché</a></li>
             </ul>
           </nav>
         </div>
