--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header_top">
           <div class="header_logo">
-            Logo
+            <img src="images/logo-1.1.png" alt="logo " />
           </div>
           <div class="header_searchbar">
             <div class="header_searchbar_input">
@@ -26,28 +30,49 @@
               <button class="btn">Créer un événement</button>
             </div>
           </div>
-          <div class="material-icons">
-            <span class="material-icons-outlined">
-             &#xE87C
-              </span>
+          <div class="header_profile">
+            <img src="images/profil.png" alt="" />
           </div>
         </div>
         <div class="header_bottom">
           <nav>
             <ul>
               <li>
-                <a href="index.html">
-                  Accueil
-                </a></li>
+                <a href="index.html"> Accueil </a>
+              </li>
               <li>
-                <a href="Auto/Moto.html">Auto/Moto</a></li>
-              <li><a href="Vêtements.html">Vêtements</a>
-                </li>
+                <a href="Auto/Moto.html">Auto/Moto</a>
+              </li>
+              <li><a href="Vêtements.html">Vêtements</a></li>
               <li><a href="Marché.html">Marché</a></li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
+
+    <main>
+      <section class="filtre jsfiltre">
+        <div class="filtre-inputs">
+          <div>
+            <input
+            type="date"
+            id="start"
+            name="trip-start"
+            value="16-04-2025"
+            min="01-01-2025"
+            max="30-12-2030" /> 
+          </div>
+        
+        </div>
+      </section>
+
+      <section class="carosel">
+        <h2 class="carosel_titre"></h2>
+        <div class="carosel_list">
+          <div class="caorsel_card"></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
