--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="header_top">
           <div class="header_logo">
-            <img src="images/logo-1.1.png" alt="logo " />
+         <a href="index.html">Les Pétpites Du Coins</a>
           </div>
           <div class="header_searchbar">
             <div class="header_searchbar_input">
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="header_profile">
-            <a href="profil.html">
+            <a href="profil.html">Connexion
               <img src="images/profil.png" alt="" />
             </a>
           </div>
@@ -74,7 +74,7 @@
               id="ville-input"
               placeholder="Tape une ville"
             />
-            <button id="btn-recherche" class="btn">Trouve les infos</button>
+            <button id="btn-recherche" class="btn">V</button>
             <ul id="resultats"></ul>
           </div>
           <div class="filtre_tags">
