--- a/profil.html
+++ b/profil.html
@@ -8,21 +8,32 @@
   </head>
   <body>
     <header class="headerProfil">
+      <div class="headerProfil_icon">
+        <div><img src="" alt=""></div>
+      <div><img src="" alt=""></div>
+      </div>
       <div class="headerProfil_logo">
-        <a href="index.html"><img src="images/logo-title.png" alt="text qui est Les pépites du coins" /></a>
+        <a href="index.html"
+          ><img
+            src="images/logo-title.png"
+            alt="text qui est Les pépites du coins"
+        /></a>
       </div>
       <div class="headerProfil_nameUser jsnameUser">
         <h1>Utilisateur 9999</h1>
       </div>
+      <div class="headerProfil_img">
+        <img src="images/profil.png" alt="logo-profil" class="" />
+      </div>
     </header>
-    <section class="">
-      <div class="profil_liens">
+    <section class="headerProfil_contenair">
+      <div class="headerProfil_liens">
         <div><a href="contact.html">Contact</a></div>
         <div><a href="apropos.html">A propos</a></div>
       </div>
-      <div class="profil_btns">
+      <div class="headerProfil_btns">
         <button class="btn_connexion">Connexion</button>
-        <button class="btn_inscription">Inscription</button>
+        <button class="btn_connexion">Inscription</button>
       </div>
     </section>
   </body>
