--- a/contact.html
+++ b/contact.html
@@ -64,15 +64,10 @@
       <form action="POST" class="Form_contactsMe" enctype="multipart/form-data">
         <h2>Contactez-nous</h2>
 
-        <div class="Form_email">
-          <label for="email">E-mail</label>
-          <input type="email" id="email" maxlength="200" required />
-        </div>
         <div class="Form_name">
           <labbel>Name</labbel>
-          <input type="text" />
+          <input type="text" placeholder="Indiquez votre nom /prenom" />
         </div>
-
         <div class="Form_objet">
           <label for="Objet">objet</label>
           <select name="objet" id="objet">
@@ -83,12 +78,37 @@
             <option value="4">Problems</option>
           </select>
         </div>
+
+        <div class="Form_email">
+          <label for="email">E-mail</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="ex: moi@email.com"
+            maxlength="200"
+            required
+          />
+        </div>
         <div class="form_mesage">
-          <textarea type="text" name="" id="" required role="dialog "></textarea>
+          <label for="message">Message</label>
+          <textarea
+            type="text"
+            name="message"
+            id="message"
+            required
+            role="dialog "
+            rows="5"
+            cols="40"
+            placeholder="Votre message ici..."
+          ></textarea>
         </div>
         <input type="hidden" name="Pays" />
-        <button type="submit" class="btn_formSubmit">Envoyer</button>
+        <button type="submit" class="btn formSubmit jsubmit_Contact">
+          Envoyer
+        </button>
       </form>
     </section>
+    <footer></footer>
   </body>
 </html>
