--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
         </div>
         <div class="Form_objet">
           <label for="Objet">objet</label>
-          <select name="objet" id="objet">
+          <select name="objet" id="objet" class="From_objetSelect">
             <option value="0">Selectionner un objet...</option>
             <option value="1">Articles</option>
             <option value="2">Evenements</option>
