--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- <script>import Swiper from 'swiper';
+
+    </script> -->
+
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les pépites du coins</title>
+    <meta name="description" content="Les pépites du coins" />
+    <script async src="dist/js/theme.js"></script>
     <link rel="stylesheet" href="/dist/css/theme.css" />
+    <link rel="stylesheet" href="swiper/css" />
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -71,7 +79,7 @@
             <input
               class="btn jsbtn_ville"
               type="text"
-              id="ville-input"
+              id="ville_input"
               placeholder="Tape une ville"
             />
             <button id="btn-recherche" class="btn">V</button>
@@ -96,5 +104,31 @@
         </div>
       </section>
     </main>
+    <footer class="footer" id="footer" >
+      <div class="container">
+        <div class="footer_top">
+          <div class="footer_logo">
+            <a href="index.html">Les Pétpites Du Coins</a>
+          </div>
+          <div class="footer_links">
+            <ul>
+              <li><a href="#">Mentions légales</a></li>
+              <li><a href="#">Politique de confidentialité</a></li>
+              <li><a href="#">Conditions d'utilisation</a></li>
+            </ul>
+          </div>
+          <div class="footer_socials">
+            <a href="#"><img src="images/facebook.png" alt="" /></a>
+            <a href="#"><img src="images/twitter.png" alt="" /></a>
+            <a href="#"><img src="images/instagram.png" alt="" /></a>
+            <a href="#"><img src="images/linkedin.png" alt="" /></a>
+          </div>
+        </div>
+        <div class="footer_bottom">
+          <p>&copy; 2023 Les Pétpites Du Coins. Tous droits réservés.</p>
+          <p>Développé par Nina Lopez</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
