--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
     </script> -->
 
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les pépites du coins</title>
     <meta name="description" content="Les pépites du coins" />
@@ -28,7 +32,7 @@
       <div class="container">
         <div class="header_top">
           <div class="header_logo">
-         <a href="index.html">Les Pétpites Du Coins</a>
+            <a href="index.html">Les Pétpites Du Coins</a>
           </div>
           <div class="header_searchbar">
             <div class="header_searchbar_input">
@@ -39,7 +43,8 @@
             </div>
           </div>
           <div class="header_profile">
-            <a href="profil.html">Connexion
+            <a href="profil.html"
+              >Connexion
               <img src="images/profil.png" alt="" />
             </a>
           </div>
@@ -100,11 +105,27 @@
       <section class="carosel">
         <h2 class="carosel_titre"></h2>
         <div class="carosel_list">
-          <div class="caorsel_card"></div>
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide ">Slide 1</div>
+              <div class="swiper-slide">Slide 2</div>
+              <div class="swiper-slide">Slide 3</div>
+              <!-- etc. -->
+            </div>
+
+            <!-- Si tu veux des boutons (facultatif) -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+
+            <!-- Si tu veux une pagination (facultatif) -->
+            <div class="swiper-pagination"></div>
+          </div>
+
+
         </div>
       </section>
     </main>
-    <footer class="footer" id="footer" >
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="footer_top">
           <div class="footer_logo">
