--- a/index.html
+++ b/index.html
@@ -2,26 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <script>import Swiper from 'swiper';
-
-    </script> -->
-
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les pépites du coins</title>
     <meta name="description" content="Les pépites du coins" />
     <script async src="dist/js/theme.js"></script>
     <link rel="stylesheet" href="/dist/css/theme.css" />
-    <link rel="stylesheet" href="swiper/css" />
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle"
@@ -50,18 +41,7 @@
           </div>
         </div>
         <div class="header_bottom">
-          <nav>
-            <ul>
-              <li>
-                <a href="index.html"> Accueil </a>
-              </li>
-              <li>
-                <a href="Auto/Moto.html">Auto/Moto</a>
-              </li>
-              <li><a href="Vêtements.html">Vêtements</a></li>
-              <li><a href="Marché.html">Marché</a></li>
-            </ul>
-          </nav>
+          <nav id="mainMenu"></nav>
         </div>
       </div>
     </header>
@@ -103,25 +83,17 @@
       </section>
 
       <section class="carosel">
-        <h2 class="carosel_titre"></h2>
-        <div class="carosel_list">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide ">Slide 1</div>
-              <div class="swiper-slide">Slide 2</div>
-              <div class="swiper-slide">Slide 3</div>
-              <!-- etc. -->
-            </div>
+        <h2 class="carosel_titre">Thème : Auto/Moto</h2>
 
-            <!-- Si tu veux des boutons (facultatif) -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+        <div class="swiper carosel_list">
+          <div class="swiper-button-next"></div>
 
-            <!-- Si tu veux une pagination (facultatif) -->
-            <div class="swiper-pagination"></div>
-          </div>
-
-
+          <div class="swiper-wrapper">
+            <div class="swiper-slide carosel_item">
+             
+            <!-- Add more slides as needed -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
         </div>
       </section>
     </main>
@@ -139,10 +111,10 @@
             </ul>
           </div>
           <div class="footer_socials">
-            <a href="#"><img src="images/facebook.png" alt="" /></a>
-            <a href="#"><img src="images/twitter.png" alt="" /></a>
-            <a href="#"><img src="images/instagram.png" alt="" /></a>
-            <a href="#"><img src="images/linkedin.png" alt="" /></a>
+            <a href="#"><img alt="" /></a>
+            <a href="#"><img alt="" /></a>
+            <a href="#"><img alt="" /></a>
+            <a href="#"><img alt="" /></a>
           </div>
         </div>
         <div class="footer_bottom">
