--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
               <input type="text" class="form-control" value="" name="" />
             </div>
             <div class="header_searchbar_btn">
-              <button class="btn">Créer un événement</button>
+              <button class="btn" > <a href="eventAdd.html">Créer un événement</a></button>
             </div>
           </div>
           <div class="header_profile">
+
             <a href="profil.html"
               >Connexion
               <img src="images/profil.png" alt="" />
             </a>
+            
           </div>
         </div>
         <div class="header_bottom">
