--- a/eventAdd.html
+++ b/eventAdd.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Les pépites du coins" />
     <link rel="stylesheet" href="dist/css/theme.css" />
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
+
   </head>
   <body>
     <header class="header header_eventAdd">
@@ -50,34 +51,73 @@
         enctype="multipart/form-data"
         class="eventAdd_form"
       >
+        <!-- Partie 1 visible  -->
         <div class="eventAdd_photoPrincipal">
           <div class="input_photoPrincipal">
             <label for="photo">Photo Principal</label>
-            <input type="file" id="photo" name="photo" />
+            <div class="filewrapper">
+              <div class="btn_photo">Importer vos photos</div>
+              <input type="file" id="photo" name="photo" />
+            </div>
           </div>
           <hr />
           <button class="btn_formEvent">Enregistrer depuis l'URL</button>
         </div>
         <div class="eventAdd_input2">
-          <label for="title">Titre de l'événement:</label>
-          <input type="text" id="title" name="title" />
+          <div class="eventAdd_title">
+            <label for="title">Titre de l'événement:</label>
+            <input type="text" id="title" name="title" />
+          </div>
 
-          <label for="location">Lieu:</label>
-          <input type="text" id="location" name="location" />
+          <div class="eventAdd_dates container_inputForm">
+            <div class="eventAdd_date">
+              <label for="date">Date:</label>
+              <input class="date" type="date" id="date" name="date" />
+            </div>
+            <div class="eventAdd_date">
+              <label for="date">Date de fin </label>
+              <input class="date" type="date" id="date" name="date" />
+            </div>
+            <button class="btn_inputDate">+</button>
+          </div>
+
+          <div class="eventAdd_time container_inputForm">
+            <div class="input_time input">
+              <label for="time">Heure:</label>
+              <input type="time" id="time" name="time" />
+            </div>
+            <div class="input_time input">
+              <label for="time">Heure de fin</label>
+              <input type="time" id="time" name="time" />
+            </div>
+          </div>
+          <div class="eventAdd_title input">
+            <label for="location">Lieu:</label>
+            <input type="text" id="location" name="location" />
+          </div>
+
+          <!-- Category , tag ,program , lien du poste sur les autre platformes  -->
+          <!-- 
 
           <label for="description">Description:</label>
           <textarea id="description" name="description"></textarea>
 
-          <label for="date">Date:</label>
-          <input type="date" id="date" name="date" />
-
-          <label for="time">Heure:</label>
-          <input type="time" id="time" name="time" />
+          <label for="description">programme</label>
+          <textarea id="description" name="description"></textarea>
+          <label for="description">Tag</label>
+          <input type="text" id="tag" name="tag" />
+          <label for="description">Catégorie</label>
+          <input type="text" id="category" name="category" />
+          <label for="description"
+            >Lien du poste sur les autres plateformes</label
+          >
+          <input type="text" id="link" name="link" />
 
           <label for="photo">Photo second</label>
           <input type="file" id="photo" name="photo" />
 
           <input type="submit" value="Créer l'événement" id="event" />
+        </div> -->
         </div>
       </form>
     </main>
