--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les pépites du coins</title>
     <meta name="description" content="Les pépites du coins" />
-    <script async src="dist/js/theme.js"></script>
+    <script defer src="dist/js/theme.js"></script>
     <link rel="stylesheet" href="/dist/css/theme.css" />
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
     <link
