--- a/eventAdd.html
+++ b/eventAdd.html
@@ -166,7 +166,9 @@
             value="Créer l'événement"
             id="eventAdd"
           />
-          <button id="eventSuivant" class="btn">Suivant</button>
+          <button id="eventSuivant" class="btn" src="index.html">
+            Suivant
+          </button>
         </div>
       </form>
     </main>
