--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
           </div>
         </div>
       </section>
+      <!-- Section events -->
+      <section class="eventNear">
+        <div class="container_top">
+          <div>
+            <h2 class="container_titre">évenement près de toi </h2>
+            <p>Les prochains rendez-vous auto dans ta region </p>
+          </div>
+          <button class="btn_next">voir tout</button>
+        </div>
+
+      </section>
 
       <footer class="footer" id="footer">
         <div class="container">
