--- a/eventAdd.html
+++ b/eventAdd.html
@@ -10,167 +10,117 @@
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
   </head>
   <body>
-    <header class="header header_eventAdd">
-      <div>
-        <button class="btn_back">
-          <a href="index.html">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M15.75 19.5 8.25 12l7.5-7.5"
+    <header class="header">
+      <div class="container">
+        <div class="header_top">
+          <div class="header_logo">
+            <a href="index.html">NovaMett</a>
+            <p>Trouve tes events auto</p>
+          </div>
+          <!--Btn de connexion -->
+          <div class="header_nav">
+            <nav>
+              <ul class="header_liens">
+                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="event.html">Evenement</a></li>
+                <li><a href="eventAdd.html">Crée</a></li>
+              </ul>
+            </nav>
+          </div>
+          <!-- Le rendre invisible plus le titre et le p  -->
+
+          <div class="btn_co">
+            <button class="connexion_btn" role="button">
+              <img
+                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAj0lEQVR4nNXQQQ7BUBSF4W/UGelc7YgQa5K29oMZXUYtQC0ACzC5Ztr0xYQ/uZP7cv578vhVMuxwQ4c6dqOpsccMBQ6oUgRdBN/MY/eV4JoiqKJ2EeEjyhRBFpIuLpepn7hEg2fMGYux4RItVpjErHHBdszlFvmHtzwkg02auNzHBqchwSMq9zHFfUjwh7wAHuEdJZUq+i0AAAAASUVORK5CYII="
+                alt="user"
               />
-            </svg>
-          </a>
-        </button>
-      </div>
-      <div class="header_logo">
-        <a href="index.html">Les Pétpites Du Coins</a>
-      </div>
-      <div class="header_profile">
-        <a href="profil.html"
-          >Connexion
-          <img src="images/profil.png" alt="" />
-        </a>
+              Connexion
+            </button>
+          </div>
+        </div>
       </div>
     </header>
-    <!-- Header -->
+    <div class="create-event">
+      <h1>Créer un événement</h1>
+      <p>Organisez votre événement automobile et rassemblez la communauté</p>
 
-    <main class="container_eventAdd">
-      <div class="eventAdd_titrePrincipal">
-        <h1><strong>Créer un événement </strong></h1>
+      <div class="tabs">
+        <button class="active">Informations</button>
+        <button>Détails</button>
+        <button>Règles & Services</button>
+        <button>Contact</button>
       </div>
 
-      <!-- Titre Formulaire  -->
+      <div class="form-card">
+        <h2><i class="fa-regular fa-calendar"></i> Informations de base</h2>
 
-      <form
-        action="eventAdd.js"
-        method="POST"
-        enctype="multipart/form-data"
-        class="eventAdd_form"
-      >
-        <!-- Partie 1 visible  -->
-        <div class="container_page active" data-id-form="3" id="page">
-          <div class="box container_box">
-            <label for="photo">Photo Principal</label>
-            <div class="filewrapper">
-              <div class="btn_photo">Importer vos photos</div>
-              <input type="file" id="photo" name="photo" />
-            </div>
-            <!-- Il y aura le trais avac le sccs que j'ai deja fait dans le duo -->
-            <button class="btn_form">Enregistrer depuis l'URL</button>
+        <form class="form-grid">
+          <div class="form-group">
+            <label>Titre de l’événement *</label>
+            <input
+              type="text"
+              placeholder="Ex: Rassemblement BMW Classic 2025"
+            />
           </div>
-          <div class="box container_box">
-            <label for="titre">Titre de l'événement:</label>
-            <input class="btn" type="text" id="titre" name="titre" />
-            <!-- Partie Dates -->
-            <div class="box container_box2">
-              <div class="box container_box">
-                <label for="date">Date:</label>
-                <input class="btn" type="date" id="date" name="date" />
-              </div>
-              <div class="box container_box">
-                <label for="date">Date:</label>
-                <input class="btn" type="date" id="date" name="date" />
-              </div>
-              <div class="box container_btn">
-                <button class="btn_addDate">+</button>
-              </div>
-            </div>
-            <!-- partie heures -->
-            <!-- ! Je sais pas comment le mettre le texte au centre des inputs -->
-            <!-- ? Changer le parametre de eventadd_date car corresopnt pas  -->
-            <div class="box container_box2">
-              <div class="box container_box">
-                <label for="time">Heure:</label>
-                <input class="btn" type="time" id="time" name="time" />
-              </div>
-              <div class="box container_box">
-                <label for="time">Heure de fin</label>
-                <input class="btn" type="time" id="time" name="time" />
-              </div>
-            </div>
-            <div class="box container_box">
-              <label for="location">Lieu:</label>
-              <input class="btn" type="text" id="location" name="location" />
-            </div>
-            <!-- Category , tag ,program , lien du poste sur les autre platformes  -->
-          </div>
-        </div>
 
-        <!-- Partie 2  -->
-        <div class="container_page" data-id-form="2" id="page1">
-          <div class="box container_box">
-            <label for="photo">Photos</label>
-            <div class="filewrapper">
-              <div class="btn_photo">Importer vos photos</div>
-              <input type="file" id="photo" name="photo" />
-            </div>
-            <!-- Il y aura le trais avac le sccs que j'ai deja fait dans le duo -->
-            <button class="btn_form">Enregistrer depuis l'URL</button>
+          <div class="form-group">
+            <label>Catégorie *</label>
+            <select>
+              <option value="">Sélectionner</option>
+              <option>Vintage</option>
+              <option>Drift</option>
+              <option>Tuning</option>
+              <option>Circuit</option>
+              <option>Exposition</option>
+              <option>Rassemblement</option>
+            </select>
           </div>
-          <div class="container_box">
-            <div class="box container_box">
-              <label for="description">Description:</label>
-              <textarea
-                class="btn"
-                id="description"
-                name="description"
-              ></textarea>
-            </div>
-            <div class="box container_box">
-              <label for="description">Programme</label>
-              <textarea
-                class="btn"
-                id="description"
-                name="description"
-              ></textarea>
-            </div>
 
-            <div class="box container_box">
-              <label for="description">Tags:</label>
-              <input class="btn" type="text" id="tag" name="tag" />
-            </div>
+          <div class="form-group">
+            <label>Date *</label>
+            <input type="date" />
           </div>
-        </div>
-        <!-- Partie 3and last -->
-        <div class="container_page" data-id-form="3" id="page2">
-          <div class="container_box">
-            <div class="box container_box">
-              <label for="description">Catégorie</label>
-              <input class="btn" type="text" id="category" name="category" />
-            </div>
 
-            <div class="box container_box">
-              <label for="description"
-                >Lien du poste sur les autres plateformes:</label
-              >
-              <input class="btn" type="text" id="link" name="link" />
-            </div>
+          <div class="form-group">
+            <label>Heure de début *</label>
+            <input type="time" />
           </div>
-        </div>
-        <!-- ! A voir si je mets les immages charger  -->
-        <!-- ? est-ce que on fait un prewiews?  -->
-        <!-- Fin  -->
-        <div>
-          <input
-            class="btn_hidden"
-            type="submit"
-            value="Créer l'événement"
-            id="eventAdd"
-          />
-          <button id="eventSuivant" class="btn" src="index.html">
-            Suivant
-          </button>
-        </div>
-      </form>
-    </main>
+
+          <div class="form-group">
+            <label>Heure de fin</label>
+            <input type="time" />
+          </div>
+
+          <div class="form-group">
+            <label>Prix d’entrée</label>
+            <input type="text" placeholder="Gratuit, 15€, 25€/personne…" />
+          </div>
+
+          <div class="form-group">
+            <label>Lieu *</label>
+            <input type="text" placeholder="Ex: Château de Vincennes" />
+          </div>
+
+          <div class="form-group">
+            <label>Ville *</label>
+            <input type="text" placeholder="Ex: Paris" />
+          </div>
+
+          <div class="form-group full">
+            <label>Adresse complète *</label>
+            <input
+              type="text"
+              placeholder="Ex: 9 Avenue de Paris, 94300 Vincennes"
+            />
+          </div>
+
+          <div class="form-group full">
+            <label>Nombre maximum de participants</label>
+            <input type="number" min="1" placeholder="Ex: 100" />
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
