--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <div class="header_nav">
             <nav>
               <ul class="header_liens">
-                <li><a href="">Acceuil</a></li>
-                <li><a href="">Evenement</a></li>
-                <li><a href="">Crée</a></li>
+                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="event.html">Evenement</a></li>
+                <li><a href="eventAdd.html">Crée</a></li>
               </ul>
             </nav>
           </div>
