--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle"
     />
   </head>
-  <!-- Body  -->
+  <!--****************************************** BODY  ********************************************-->
   <body>
     <header class="header">
       <div class="container">
@@ -50,7 +50,7 @@
         </div>
       </div>
     </header>
-    <!-- Header  -->
+    <!-- ********************************* Header  ****************************************-->
     <main>
       <section class="location">
         <div class="container_text">
@@ -74,7 +74,7 @@
         </div>
       </section>
 
-      <!-- Category -->
+      <!-- *******************Category **********************-->
 
       <section class="category container_category">
         <div class="container_text">
@@ -172,7 +172,8 @@
       </section>
 
       <!-- Section events -->
-
+<!-- Ici il va devoir avoir une logique que ont recoient uniquement les 3 plus recent  -->
+ <!-- si loc alors de toi sinon general  -->
       <section class="eventNear container_category">
         <div class="eventNear_top">
           <div class="eventNear_top-left">
