--- a/eventAdd.html
+++ b/eventAdd.html
@@ -62,7 +62,7 @@
 
         <!-- ***************  TITRE **************** -->
 
-        <section class="tab-section" data-tab="tab-section" id="infos">
+        <section class="tab-section active" data-tab="tab-section" id="infos">
           <div class="form-card">
             <h2>Informations de base</h2>
 
