--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             propres rassemblements et connecter avec des milliers de passionnés
             d'automobile.
           </p>
-          <div class="footer_cta_buttons location_form">
+          <div class="footer_buttons location_form">
             <button class="btn primary">Créer un compte</button>
             <button class="btn secondary" disabled>
               Organiser un Événement
