--- a/pages/Apropos.html
+++ b/pages/Apropos.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/dist/css/theme.css" />
+    <link rel="stylesheet" href="../dist/css/theme.css" />
     <title>Page Profile</title>
   </head>
   <body>
     <header class="headerProfil">
       <div class="headerProfil_logo">
-        <a href="index.html"
+        <a href="../index.html"
           ><img
             src="images/logo-title.png"
             alt="text qui est Les pépites du coins"
