--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
   <body>
     <header class="headerProfil">
       <div class="headerProfil_logo">
-        <a href="index.html"
+        <a href="../index.html"
           ><img
             src="images/logo-title.png"
             alt="text qui est Les pépites du coins"
