--- a/pages/eventAdd.html
+++ b/pages/eventAdd.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crée un événement</title>
     <meta name="description" content="Les pépites du coins" />
-    <link rel="stylesheet" href="dist/css/theme.css" />
-    <script defer src="dist/js/theme.js"></script>
+    <link rel="stylesheet" href="../dist/css/theme.css" />
+    <script defer src="../dist/js/theme.js"></script>
     <link rel="icon" type="image/x-icon" href="assets/pepite-1.png" />
   </head>
   <body>
@@ -22,7 +22,7 @@
           <div class="header_nav">
             <nav>
               <ul class="header_liens">
-                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="../index.html">Acceuil</a></li>
                 <li><a href="event.html">Evenement</a></li>
                 <li><a href="eventAdd.html">Crée</a></li>
               </ul>
