--- a/pages/inscription.html
+++ b/pages/inscription.html
@@ -18,7 +18,7 @@
           <div class="header_nav">
             <nav>
               <ul class="header_liens">
-                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="../index.html">Acceuil</a></li>
                 <li><a href="event.html">Evenement</a></li>
                 <li><a href="eventAdd.html">Crée</a></li>
               </ul>
@@ -39,7 +39,6 @@
       </div>
     </header>
     <!-- *************  FIN HEADER ************************-->
-   
 
     <!-- Creation de compte -->
 
