--- a/pages/event.html
+++ b/pages/event.html
@@ -11,14 +11,14 @@
       <div class="container">
         <div class="header_top">
           <div class="header_logo">
-            <a href="index.html">NovaMett</a>
+            <a href="../index.html">NovaMett</a>
             <p>Trouve tes events auto</p>
           </div>
           <!--Btn de connexion -->
           <div class="header_nav">
             <nav>
               <ul class="header_liens">
-                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="../index.html">Acceuil</a></li>
                 <li><a href="event.html">Evenement</a></li>
                 <li><a href="eventAdd.html">Crée</a></li>
               </ul>
